# cad2023

./: .replit  acp  init.py  pelicanconf.py  publishconf.py  pyproject.toml  server.py
blog/: 2023-Fall-CAD-Week1.html  2023-Fall-CAD-week1-use-blog-to-record-teaching-progress.html  2023-Fall-Intro-to-computer-aided-design.html  archives.html  authors.html  categories.html  index.html  search.html  sitemap.xml  tags.html  tipuesearch_content.js  tipuesearch_content.json
blog/author/: yen.html
blog/category/: misc.html
blog/feeds/: all.atom.xml  misc.atom.xml
blog/pages/about/: index.html
blog/tag/: 2023fallcad.html
config/: content.htm  content_backup.htm  pelican.leo  sitetitle
content/: About.html  Ball balancing.html  Brython.html  CoppeliaSim.html  Electronics.html  Loop the loop.html  Mechanical.html  Modeling.html  Models.html  NX.html  NX_tutorial.html  On_tutorial.html  Onshape.html  PICSimLab.html  Portable USB.html  Projects.html  Research.html  SE_Tutorial.html  Shotcut.html  Simulate.html  Simulation.html  SketchFlat.html  Solid Edge.html  Solvespace.html  TCExam.html  Virtual pinball.html  Webots.html  index.html  sitemap.html  tipuesearch_content.js  wbt1.html  如何維護網站.html  機電系統設計與模擬.html  深度學習.html  自架主機.html  虛實整合系統設計.html  資料管理.html
downloads/: 1d_ball_balancing_table.7z  ball_beam_balancing_coppeliasim.7z  sketchflat_source_and_exe.7z
markdown/: 20230617.md  20230618.md
markdown/pages/: pages_1.md
